Backport addons fix